--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "geolib": "^2.0.24",
     "sequelize": "^4.22.11",
     "sqlite3": "^3.1.13"
   }
